--- a/TODO
+++ b/TODO
@@ -4,24 +4,27 @@ RELEASE(0.7.0):
 - s/bse_engine_garbage_collect/bse_engine_user_thread_collect/
 - add default-settings config preference (authors, license): Creative Commons Attribution 2.5 (http://creativecommons.org/licenses/by/2.5/)
 - rename bsesh to bsescm
--  fix birnet_thread_run uses (unref thread)
 - fix beast popping up a help browser for release notes when new beast is installed
-- BseSimpleADSR + ([_] fixed sustain time, sustain time [%] [XXXXXXXXX])
-- store pianor roll settings (hzoom,vzoom,quantization,note-length) in .bse files
 - fix "../../tools/bsefextract --", this needs bse_init_intern()
+- remove biquad normalization
 - WEB: add LAD-2005 paper to website
+- WEB: resources: http://packages.qa.debian.org/b/bse-alsa.html
+- s/deleet inputs/disconnect inputs/
+- fix birnet_thread_run uses (unref thread)
+INCOMPAT:
+- merge 2 * BseSimpleADSR into 1
+- delete BseAtanDistort
+- nuke compat code
+MISC:
+- align engine blck adresses and engine block sizes on 16byte boundaries upon allocation
+- BseSimpleADSR + ([_] fixed sustain time, sustain time [%] [XXXXXXXXX])
+- store piano roll settings (hzoom,vzoom,quantization,note-length) in .bse files
 - fix/re-enable midi note recording into piano roll
 - update status message of recording script according to is/isnot recording
 - look into adding BseJanitor::status-caption (which could become primary text for status message display)
-MISC:
-- align engine blck adresses and engine block sizes on 16byte boundaries upon allocation
 - get rid of sfimemory
-- remove biquad normalization
-- reduce constant to 4
-- resources: http://packages.qa.debian.org/b/bse-alsa.html
-- s/deleet inputs/disconnect inputs/
 - print detail score with loop range (in progress printing)
-- save detail_names as comment with scroe_details
+- save detail_names as comment with score_details
 - adjust inner loop abortion according to normed score values
 - THREADING: benchmark TLS vs. g_*private_set()/pthread_setspecific()
 - THREADING: make Birnet::Thread provide DataListContainer functionally, albeit thread-safe
@@ -32,11 +35,6 @@ MODULES:
 - joystick module
 - allow output-only modules to have their connection bar at the top
 - BseSimpleADSR: support 5-stage sforzando: http://www.soundonsound.com/sos/jul04/articles/synthsecrets.htm
-INCOMPAT:
-- merge 2 * BseSimpleADSR into 1
-- move BseConstant to 4 channels
-- delete BseAtanDistort
-- nuke compat code
 BUGS(FIXME):
 - add/remove actions to/from shadow storage and require a script to issue actions-commit/gui-update or similar for the actions to really appear on-screen
 - add BST_MSG_PROXY(project) for detail section
