--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,16 @@
+Sat May 20 15:34:05 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetutilsxx.cc (birnet_init_extended): added srand48() call to random 
+	number initializations.
+
+	* birnettests.h: expose birnet_test_setup(). initialize birnet
+	with stand-alone=true for test programs to prevent rcfiles and the like
+	to taint test results.
+
+	* birnetutilsxx.cc:
+	* birnetcore.[hc]: added BirnetInitValue and accessors to get values of
+	different types. added birnet_init_extended() and birnet_init_settings.
+
 Wed May 10 00:07:16 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetthread.c: minor protability fix for sched_yield().
