--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 RELEASE(0.7.0):
+- invoke ../bse/bseautodoc the same way the BSE shell is invoked (no rcfile etc)
+- move sfi_alloc_upper_power2 to birnet
 - move clean-generated: and generated: into Makefile.decl
 - s/bse-test-error/bse-error-test/
 - s/bse_engine_garbage_collect/bse_engine_user_thread_collect/
