--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Sun May 21 11:56:04 2006  Tim Janik  <timj@gtk.org>
+
+	* POTFILES.in: translatable file updates.
+
 Mon May 15 21:34:38 2006  Tim Janik  <timj@gtk.org>
 
 	* intltool-scm.diff: update the Makefile.in.in patch so it includes 
