--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 RELEASE(0.7.0):
+- implement include path handling for bsewave files to fix slowtests/audio/Makefile.am:minisong-test
 - invoke ../bse/bseautodoc the same way the BSE shell is invoked (no rcfile etc)
 - move sfi_alloc_upper_power2 to birnet
 - move clean-generated: and generated: into Makefile.decl
