--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 23 00:11:30 2006  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.h: removed definition of G_IMPLEMENT_INTERFACE() which is 
+	supplied by stock glib-2.6.
+
 Fri May  5 19:58:06 2006  Tim Janik  <timj@gtk.org>
 
 	* sficxx.hh: fixed reference counting and related assertions for 
