--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed May 24 17:50:55 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tools/bsefcompare.cc: Explicitely allow setting the threshold to a
+	value > 100%, which will make bsefcompare always fail.
+
 Tue May 23 00:10:47 2006  Tim Janik  <timj@gtk.org>
 
 	* Makefile.decl: fixed up bogus non-true exit values in distfile-list: rule.
