--- a/drivers/bse-portaudio/NEWS
+++ b/drivers/bse-portaudio/NEWS
@@ -1,3 +1,7 @@
+Overview of Changes in BSE-PortAudio 0.7.0:
+
+* Build fixes for BEAST-0.7.0
+
 Overview of Changes in BSE-PortAudio 0.6.6:
 
 * Build fixes for BEAST-0.6.6
