--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 26 13:42:59 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetcore.h: provide ABS, MIN, MAX, CLAMP.
+
 Sat May 20 15:34:05 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetutilsxx.cc (birnet_init_extended): added srand48() call to random 
