--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,11 @@
+Fri May 26 14:01:45 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetutilsxx.[hc]*: added dirname() and basename().
+	provide PRIVATE_CLASS_COPY() as birnet source extension.
+
+	* birnetcore.h: provide BIRNET_DIR_SEPARATOR, BIRNET_SEARCHPATH_SEPARATOR
+	and related macros.
+
 Fri May 26 13:42:59 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetcore.h: provide ABS, MIN, MAX, CLAMP.
