--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 26 17:38:00 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetcore.h: define BIRNET_*LIKELY() macros.
+
 Fri May 26 14:01:45 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetutilsxx.[hc]*: added dirname() and basename().
