--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed May 31 00:39:52 2006  Tim Janik  <timj@gtk.org>
+
+	* autogen.sh: support patching of intltool-extract.in versions >= 0.35.
+
+	* po/intltool-scm-35.diff: version of intltool-scm.diff that applies 
+	against intltool-extract.in 0.35.2.
+
 Tue May 30 11:57:03 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* beast-gtk/bstcanvaslink.c:
