--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jun  5 15:33:26 2006  Tim Janik  <timj@gtk.org>
+
+	* tools/bwtwave.cc: fix binary_lookup namespace.
+
+	* tools/bsewavetool.cc (parse_str_option): fixed output argument passing.
+
 Wed May 31 03:02:36 2006  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstbseutils.[hc]: added preserve_non_dirty flag to
