--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,10 @@
+Tue Jun  6 14:34:53 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/threads.cc: Fixed bug in auto locker benchmark. It is
+	necessary to take into account that the different loops will run with
+	a different number of dups; so the times need to be adjusted
+	accordingly.
+
 Tue Jun  6 02:03:07 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetthreadxx.hh: reimplemented the AutoLocker class with the help of
