add -Wstrict-null-sentinel to CXXFLAGS.
Thu Jun  8 18:26:33 2006  Tim Janik  <timj@gtk.org>

        * acbeast.m4: add -Wstrict-null-sentinel to CXXFLAGS.

svn path=/trunk/; revision=3768

--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun  8 18:26:33 2006  Tim Janik  <timj@gtk.org>
+
+        * drivers/bse-alsa/acbeast.m4: update.
+
 Wed May 10 19:11:33 2006  Tim Janik  <timj@gtk.org>
 
 	* bsepcmdevice-alsa.c: 
