--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun  8 18:26:33 2006  Tim Janik  <timj@gtk.org>
+
+	* acbeast.m4: add -Wstrict-null-sentinel to CXXFLAGS.
+
 Mon Jun  5 15:33:26 2006  Tim Janik  <timj@gtk.org>
 
 	* tools/bwtwave.cc: fix binary_lookup namespace.
