--- a/drivers/bse-portaudio/ChangeLog
+++ b/drivers/bse-portaudio/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun  8 18:26:33 2006  Tim Janik  <timj@gtk.org>
+        
+        * drivers/bse-portaudio/acbeast.m4: update.
+
 Thu May 25 14:38:32 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsepcmdevice-portaudio.cc: Clip audio data - it seems that PortAudio
